[package]
name = "bfdbg"
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22.0"
tui = { version = "0.16.0", default-features = false, features = ['crossterm'] }